--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 distro==1.9.0
+dpath==2.2.0
+ddgs==9.3.1
+AsyncDDGS==0.1.0a1
 fastapi==0.115.13
 google-api-core==2.25.1
 google-auth==2.40.3
